kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-kubernetes
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: go-kubernetes
  type: NodePort
